tests/cases/nul-compile-fail-2.stderr
error: C-style string cannot contain nul characters
 --> $DIR/nul-compile-fail-2.rs:4:12
  |
4 |     wch_c!("also fails \0");
  |            ^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
